<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/bass_boost_strength">

        <SwitchPreference
            android:key="bass"
            android:title="Enable"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="bass_strength"
            android:max="100" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/virtualizer_strength">

        <SwitchPreference
            android:key="virtualization"
            android:title="Enable"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="virtualization_strength"
            android:max="100" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pr_title">

        <!--<ListPreference
            android:key="virtualization"
            android:title="@string/pr_dialog_title"
            android:summary="@string/pr_summary"
            android:value="None" />-->

    </PreferenceCategory>

</PreferenceScreen>