<?xml version="1.0" encoding="utf-8" ?>
<!-- Copyright (C) 2010-2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/mainViewLifeVibesLogo"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lifevibes_logo" />
    <ImageView
        android:src="@android:drawable/divider_horizontal_dark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY" />
    <TextView
        android:id="@+id/noEffectsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_effects"
        android:layout_weight="1"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/mainToggleEffectsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:paddingRight="?android:attr/scrollbarSize">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            android:layout_weight="1">
            <TextView
                android:id="@+id/mainToggleEffectsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:text="@string/main_toggle_effects_title" />
            <TextView
                android:id="@+id/mainToggleEffectsSummaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainToggleEffectsTitleTextView"
                android:layout_alignLeft="@+id/mainToggleEffectsTitleTextView"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:maxLines="4"
                android:text="@string/main_toggle_effects_summary" />
        </RelativeLayout>
        <Switch
            android:id="@+id/mainToggleEffectsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dip"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <ImageView
        android:src="@android:drawable/divider_horizontal_dark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY" />
    <ScrollView
        android:id="@+id/contentSoundEffects"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/eqLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:paddingRight="?android:attr/scrollbarSize"
                android:focusable="true"
                android:background="@android:drawable/list_selector_background">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:layout_marginBottom="6dip"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/eqPresetsTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:text="@string/eq_title" />
                    <TextView
                        android:id="@+id/eqPresetsSummaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eqPresetsTitleTextView"
                        android:layout_alignLeft="@+id/eqPresetsTitleTextView"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:maxLines="4"
                        android:text="@string/eq_summary" />
                </RelativeLayout>
                <ImageView
                    android:id="@+id/eqPresetsImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dip"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/btn_circle"
                    android:src="@drawable/ic_btn_round_more" />
            </LinearLayout>
            <ImageView
                android:src="@android:drawable/divider_horizontal_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
            <LinearLayout
                android:id="@+id/bBLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:paddingRight="?android:attr/scrollbarSize"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="6dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                android:orientation="vertical"
                android:background="@android:drawable/list_selector_background">
                <TextView
                    android:id="@+id/bBStrengthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:text="@string/bass_boost_strength" />
                <com.android.musicfx.seekbar.SeekBar
                    android:id="@+id/bBStrengthSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip" />
            </LinearLayout>
            <ImageView
                android:src="@android:drawable/divider_horizontal_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
            <LinearLayout
                android:id="@+id/vILayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:paddingRight="?android:attr/scrollbarSize"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="6dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                android:orientation="vertical"
                android:background="@android:drawable/list_selector_background">
                <TextView
                    android:id="@+id/vIStrengthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:text="@string/virtualizer_strength" />
                <com.android.musicfx.seekbar.SeekBar
                    android:id="@+id/vIStrengthSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip" />
            </LinearLayout>
            <ImageView
                android:src="@android:drawable/divider_horizontal_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/eRLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:paddingRight="?android:attr/scrollbarSize"
                android:focusable="true"
                android:background="@android:drawable/list_selector_background"
                android:visibility="gone">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:layout_marginBottom="6dip"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/eRPresetsTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:text="@string/pr_title" />
                    <TextView
                        android:id="@+id/eRPresetsSummaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eRPresetsTitleTextView"
                        android:layout_alignLeft="@+id/eRPresetsTitleTextView"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:maxLines="4"
                        android:text="@string/pr_summary" />
                </RelativeLayout>
                <ImageView
                    android:id="@+id/eRPresetsImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dip"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/btn_circle"
                    android:src="@drawable/ic_btn_round_more" />
            </LinearLayout>
            <ImageView
                android:src="@android:drawable/divider_horizontal_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
            <LinearLayout
                android:id="@+id/resetDefaultsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:paddingRight="?android:attr/scrollbarSize"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="6dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                android:orientation="vertical"
                android:focusable="true"
                android:background="@android:drawable/list_selector_background">
                <TextView
                    android:id="@+id/resetDefaultsTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:text="@string/reset_defaults_title" />
                <TextView
                    android:id="@+id/resetDefaultsSummaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:maxLines="4"
                    android:text="@string/reset_defaults_summary" />
            </LinearLayout>
            <ImageView
                android:src="@android:drawable/divider_horizontal_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
